--- a/digital_cv/src/components/about/about.css
+++ b/digital_cv/src/components/about/about.css
@@ -7,21 +7,21 @@
     width: 100%;
     aspect-ratio: 1/1;
     border-radius: 2rem;
-    background: linear-gradient(
+    /* background: linear-gradient(
         45deg, transparent,
         var(--color-primary), transparent
-    );
+    ); */
     display: grid;
     place-items: center;
 }
 .about_me_pic{
     border-radius: 2rem;
     overflow: hidden;
-    transform: rotate(5deg);
-    transition: var(--transition); 
+    /* transform: rotate(5deg); */
+    /* transition: var(--transition);  */
 }
 .about_me_pic:hover{
-    transform: rotate(0);
+    /* transform: rotate(0); */
 }
 .about_cards{
     display: grid;
