--- a/digital_cv/src/components/header/header.css
+++ b/digital_cv/src/components/header/header.css
@@ -11,52 +11,23 @@ header{
 }
 
 /* CTA */
-
 .cta{
     margin-top: 2.5rem;
     display: flex;
     gap: 1.2rem;
     justify-content: center;
 }
-
-/* LINKS */
-
-.header_socials{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.8rem;
-    position: absolute;
-    left: 0;
-    bottom: 3rem;
-}
-.header_socials::after{
-    content: '';
-    width: 1px;
-    height: 2rem;
-    background: var(--color-primary);
-}
 /* PROFILE  */
 .me{
-    background: var(--color-primary);
-    width: 20rem;
-    height: 20rem;
+    background: rgb(12, 10, 66);
+    width: 19rem;
+    height: 25rem;
     position: absolute;
     left: calc(50% - 11rem);
     margin-top: 4rem;
-    border-radius: 12rem ;
+    border-radius:12rem 12rem 0 0 ;
     overflow: hidden;
-    /* padding: 5rem 1.5rem 1.5rem 1.5rem; */
-}
-/* SCROLL DOWN  */
-
-.scroll_down{
-    position: absolute;
-    right: -2.3rrem;
-    bottom: 5rem;
-    transform: rotate(90 deg);
-    font-weight: 200;
-    font-size: 0.9rem;
+    /* padding:   1.5rem 1.5rem; */
 }
 /* MEDIUM DEVICES */
 @media screen and (max-width:1024px){
